# adya_mcp_hackathon

./: .gitignore  INTEGRATION_GUIDE.md
mcp_servers/js/clients/src/: client_and_server_config.ts  client_and_server_execution.ts
mcp_servers/js/servers/: ASSET_MANAGEMENT_MIGRATION_TASKS.md
mcp_servers/js/servers/ANALYSIS/: README.md  package.json
mcp_servers/js/servers/ASSET_MANAGEMENT/: README.md  package.json  tsconfig.json
mcp_servers/js/servers/ENVIRONMENT_CONFIG/: package.json
mcp_servers/python/clients/: requirements.txt  run.py
mcp_servers/python/servers/MCP-JOOMLA/mcp-joomla/: README.md  pyproject.toml
mcp_servers/python/servers/MCP-JOOMLA/mcp-joomla/src/mcp_joomla/: joomla_client.py  server.py  toolhandler.py  tools_articles.py  tools_categories.py  tools_management.py  tools_users.py
mcp_servers_documentation/ANALYSIS/: credentials.md  demo_videos.md  server_features.md
mcp_servers_documentation/ASSET_MANAGEMENT/: credentials.md  demo_videos.md  server_features.md
mcp_servers_documentation/ENVIRONMENT_CONFIG/: credentials.md  demo_videos.md  server_features.md
mcp_servers_documentation/EVENTBRITE-MCP/: credentials.md  demo_videos.md  server_features.md
mcp_servers_documentation/FEDORA-MCP-SERVER/: credentials.md  demo_videos.md  server_features.md
mcp_servers_documentation/MCP-JOOMLA/: credentials.md  demo_videos.md  server_features.md
mcp_servers_documentation/MOBILE-MCP/: credentials.md  demo_videos.md  server_features.md
mcp_servers_documentation/STRUCTURED_METADATA/: credentials.md  demo_videos.md  server_features.md
(+45 files in other folders)
